<resources>
    <string name="app_name">Make Password</string>
    <string name="password"> password </string>
    <string name="generate_password">Generate Password</string>
    <string name="lowercaseEg">e.g. abcdefghi</string>
    <string name="uppercaseEg">e.g. ABSCDGHI</string>
    <string name="symbolEg">e.g. @#$%!%*+=?</string>
    <string name="numericalsEg">e.g. 123456</string>
    <string name="ambiguousEg"><![CDATA[e.g. { } [ ] ( ) / \' ` ~ , ;]]></string>
    <string name="copyBtn">copy</string>
    <string name="lower_case">Lower Case</string>
    <string name="upper_case">Upper Case</string>
    <string name="symbol">Symbol</string>
    <string name="numerals">Numerals</string>
    <string name="ambiguous">Ambiguous</string>
    <string name="openDrawerContentDescRes">drawer open</string>
    <string name="closeDrawerContentDescRes">drawer close</string>
    <string name="title_activity_app_drawer">AppDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="uppercase">Uppercase</string>
    <string name="lowercase">Lowercase</string>
    <string name="numbers">Numbers</string>
    <string name="symbols">Symbols</string>
    <string name="generate_a_secure_password">Generate a Secure Password</string>
    <string name="copy_button">copy button</string>
    <string name="refresh_button">refresh button</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_tool">Tool</string>
</resources>