<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Generate a Secure Password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/displayPass"
        android:minWidth="248dp"
        android:maxWidth="248dp"
        android:minHeight="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="344dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:hint="@string/password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/genpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/generate_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayPass"
        app:layout_constraintVertical_bias="0.204" />

    <Switch
        android:id="@+id/includeSymbol"
        android:layout_width="173dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/symbol"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeUpperChar" />

    <Switch
        android:id="@+id/includeUpperChar"
        android:layout_width="173dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/upper_case"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeLowerCase" />

    <Switch
        android:id="@+id/includeLowerCase"
        android:layout_width="173dp"
        android:layout_height="25dp"
        android:layout_marginTop="92dp"
        android:text="@string/lower_case"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/includeAmbiguous"
        android:layout_width="173dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/ambiguous"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeNumericals" />

    <Switch
        android:id="@+id/includeNumericals"
        android:layout_width="173dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/numerals"
        android:theme="@style/SCBSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeSymbol" />

    <TextView
        android:id="@+id/lowerCaseExample"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="92dp"
        android:text="@string/lowercaseEg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upperCaseExample"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/uppercaseEg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowerCaseExample" />

    <TextView
        android:id="@+id/specialCharExample"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/symbolEg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upperCaseExample" />

    <TextView
        android:id="@+id/numericalsExample"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/numericalsEg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialCharExample" />

    <TextView
        android:id="@+id/ambiguousExample"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:text="@string/ambiguousEg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numericalsExample" />

    <Button
        android:id="@+id/copyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:backgroundTint="@color/copyBtn"
        android:text="@string/copyBtn"
        android:textColor="@color/textWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toEndOf="@+id/displayPass"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <SeekBar
        android:id="@+id/getPassLenSeekBar"
        android:layout_width="145dp"
        android:layout_height="29dp"
        android:layout_marginStart="44dp"
        android:thumbTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toEndOf="@+id/displayPassLen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <TextView
        android:id="@+id/displayPassLen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:textSize="32dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

</androidx.constraintlayout.widget.ConstraintLayout>